--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,26 @@
 [SETTINGS]
-WIN_WIDTH =          800
-WIN_HEIGHT =         600
-IMG_BASE_SIZE =      150
-IMG_SIZE_DIVD =      70 
-IMG_ROTATION =       20 
-IMG_ROT_SP =         2  
-MAX_FPS =            30 
-COLOR_SPETM_DV =     4  
-SLOWBAR_SP =         5  
-BAR_SPER =           5  
-PLAYBAR_RES =        800
-PLAYBAR_WIDTH =      800
-PLAYBAR_LINE_WIDTH = 4  
+win_width = 800
+win_height = 600
+img_base_size = 150
+img_size_divd = 70
+img_rotation = 20
+img_rot_sp = 2
+max_fps = 30
+color_spetm_dv = 4
+slowbar_sp = 5
+bar_sper = 5
+playbar_res = 800
+playbar_width = 800
+playbar_line_width = 4
+
+[VIDEO]
+img_base_size = 350
+img_size_divd = 100
+img_rotation = 20
+img_rot_sp = 2
+max_fps = 30
+color_spetm_dv = 4
+slowbar_sp = 5
+bar_sper = 5
+slowbar_width = 4
+
