--- a/config.ini
+++ b/config.ini
@@ -14,13 +14,21 @@ playbar_width = 800
 playbar_line_width = 4
 
 [VIDEO]
-img_base_size = 350
-img_size_divd = 100
+img_base_size = 200
+img_size_divd = 50
 img_rotation = 20
 img_rot_sp = 2
-max_fps = 30
+max_fps = 60
 color_spetm_dv = 4
 slowbar_sp = 5
 bar_sper = 5
 slowbar_width = 4
+vid_width = 1080
+vid_height = 1920
+
+[EXTRAS]
+bardiv = 80
+bl = 1024
+playbar_height_div = 70
+maxbarheight = 800
 
